Bug 308638 - cannot start torrent if media unmounted
Summary: cannot start torrent if media unmounted
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.3.0
Platform: Gentoo Packages Linux
: NOR major
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
: 306825 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-10-19 06:53 UTC by Anton Suvorov
Modified: 2012-12-08 11:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anton Suvorov 2012-10-19 06:53:26 UTC
KTorrent cannot start new torrents if the network media(in fstab) is unmounted, but the files aren't kept on thet media, it shows the empty list of unmounted disks like on screenshot

Reproducible: Always

Steps to Reproduce:
1. create some entry in fstab for CIFS share
2. make the share unreachable(in my case the PC is shut down)
3. try to add new torrent, it will show the damn window and torrent won't  start
Actual Results:  
the problem isn't missing

Expected Results:  
the torrent should start normally, looking on mounted/unmounted medias should be on the user's side

http://imageshack.us/photo/my-images/600/ktorrentbug.png/
Comment 1 Joris Guisson 2012-10-20 10:50:10 UTC
Git commit 16501f71b231c996864af580e3f43df87c32ac4d by Joris Guisson.
Committed on 20/10/2012 at 12:49.
Pushed by guisson into branch 'master'.

First check for missing files then for unmounted storage

M  +1    -0    ChangeLog
M  +4    -4    ktorrent/core.cpp

http://commits.kde.org/ktorrent/16501f71b231c996864af580e3f43df87c32ac4d
Comment 2 Joris Guisson 2012-10-20 10:51:33 UTC
Git commit 26403c5499c4b03c46e291967a7d59f4effc4a23 by Joris Guisson.
Committed on 20/10/2012 at 12:49.
Pushed by guisson into branch '4.3'.

Backport to 4.3: First check for missing files then for unmounted storage

M  +1    -0    ChangeLog
M  +4    -4    ktorrent/core.cpp

http://commits.kde.org/ktorrent/26403c5499c4b03c46e291967a7d59f4effc4a23
Comment 3 Joris Guisson 2012-12-08 11:37:05 UTC
*** Bug 306825 has been marked as a duplicate of this bug. ***