First check for missing files then for unmounted storage

BUG: 308638